--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "javascript-action",
-  "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "name": "e2e-tool-action",
+  "version": "0.1.0",
+  "description": "GitHub Action for smoothly building and running your E2E tests.",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -11,19 +11,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/TobiasL/e2e-tool-action.git"
   },
   "keywords": [
     "GitHub",
     "Actions",
-    "JavaScript"
+    "E2E"
   ],
-  "author": "",
+  "author": "Tobias Lindström",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/TobiasL/e2e-tool-action/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/TobiasL/e2e-tool-action#readme",
   "dependencies": {
     "@actions/core": "^1.2.5"
   },
