--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   },
   "homepage": "https://github.com/TobiasL/e2e-tool-action#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5"
+    "@actions/core": "1.9.1"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^8.0.0",
-    "jest": "^27.2.5"
+    "@vercel/ncc": "0.34.0",
+    "eslint": "8.24.0",
+    "jest": "29.0.3"
   }
 }
